# devdir

./: README.md
algorithm/LineSphereIntersect/: test.cpp
algorithm/lru/lrubyc/: lru_test  lru_test.c
algorithm/lru/lrubyc++/: lru_test  lru_test.cpp  lru_test.h  lru_test_main.cpp
algorithm/lru/lrubyjava/: LRUCache.java
algorithm/tree/binaryTree/: binaryTree.cpp
libtestdir/javaLinkedList/: Test.java
libtestdir/jsoncpp/: CMakeLists.txt  jsoncpp.cpp
libtestdir/pcl/Surface/concaveHull2D/: CMakeLists.txt  concaveHull2D.cpp
libtestdir/pcl/Surface/smoothing/: CMakeLists.txt  resampling.cpp
libtestdir/pcl/data/: bowl_1_0.pcd
libtestdir/pcl/filter/ConditionalRemoval/: CMakeLists.txt  remove_outliers.cpp
libtestdir/pcl/filter/ExtractIndices/: CMakeLists.txt  extract_indices.cpp
libtestdir/pcl/filter/PassThrough/: CMakeLists.txt  README.md  passthrough.cpp
libtestdir/pcl/filter/ProjectToPlanar/: CMakeLists.txt  README.md  project_inliers.cpp
libtestdir/pcl/filter/StatisticalOutlierRemoval/: CMakeLists.txt  README.md  statistical_removal.cpp
libtestdir/pcl/filter/VoxelGrid/: CMakeLists.txt  README.md  voxel_grid.cpp
libtestdir/pcl/sacSegmentation/sacLine/: CMakeLists.txt  sacLine.cpp
libtestdir/pcl/sampleConsensus/sacLane/: CMakeLists.txt  random_sample_consensus.cpp
libtestdir/pcl/segmentation/EuclideanClusterExt/: CMakeLists.txt  cluster_extraction.cpp
libtestdir/pcl/testpcl/: CMakeLists.txt
libtestdir/pcl/tools/: PCLPCDViewer.cpp  PCLPCDViewer.h
libtestdir/sfml/: CMakeLists.txt  game.cpp  game.hpp  libsfml.hpp  main.cpp  player.cpp  player.hpp  sfml.kdev4
libtestdir/sfml/.kdev4/: sfml.kdev4
libtestdir/stl/imp_iterator/: README.txt  imp_list.h  imp_list.hpp  imp_list_test  imp_list_test.cpp
libtestdir/stl/iterator/: iterator_test  iterator_test.cpp
libtestdir/vtk/2DCellsIntersect/: CMakeLists.txt  convexCellsIntersect.cpp
libtestdir/vtk/PlanesInstersection/: CMakeLists.txt  PlanesIntersection.cpp
libtestdir/vtk/PolygonIntersection/: CMakeLists.txt  PolygonIntersection.cpp
syntax/c++/c++_io/: dataHasRssi.txt  file.txt  readfile  readfile.cpp  readtobuffer.cpp
syntax/c++/forward_fun/: testforward.cpp
syntax/c++/non-static_callback/: lib.cpp  lib.h  main  main.cpp
syntax/c++/obj_assignment/: obj_assignment  obj_assignment.cpp
syntax/c++/ptr_array_size/: ptrArraySize  ptrArraySize.cpp
syntax/c++/regex/: test  test.cpp
syntax/c++/rvalue_reference/: stack.cpp  stack.hpp
syntax/c++/std_callback/: lib.cpp  lib.h  main  main.cpp  user.cpp  user.h
syntax/c++/std_sort/: test  test.cpp
syntax/c++/variadic_fun/: print  print.c
syntax/c++/variadic_templates/: print  print.cpp
syntax/c/callback/: lib.c  lib.h  main  main.c
syntax/va_args/: README.md
(+4 files in other folders)
